--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost:15432/product
+spring.datasource.url=jdbc:postgresql://172.21.0.2:15432/product
 spring.datasource.username=postgres
 spring.datasource.password=password
